<resources>
    <string name="app_name">GEEKS_PRO_MVD</string>
    <string name="ok">OK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="authorization" translatable="false">Авторизация</string>
    <string name="notice" translatable="false">Если вы забыли логин или пароль, обратитесь к своему руководителю</string>
    <string name="Login">Логин</string>
    <string name="Password">Пароль</string>
    <string name="login_error">Неверный логин</string>
    <string name="password_error">Неверный пароль</string>
    <string name="goInto">Войти</string>
    <string name="MainHome" translatable="false">Новости</string>
    <string name="Library">Библиотека</string>
    <string name="Documents">Документы</string>
    <string name="cross">Отмена</string>
    <string name="MenuOthers">Меню</string>
    <string name="fragment_statutes_title">Уставы вооруженых сил КР</string>
    <string name="fragment_law_title">Закон “О статусе военнослужащих”</string>
    <string name="constitution">Конституция КР</string>
    <string name="documents_laws">Законы</string>
    <string name="statutes">Уставы Вооруженных сил КР</string>
    <string name="fragment_constitution_title">Конституция КР</string>
    <string name="doc">Документы</string>
    <string name="menu">Меню</string>
    <string name="kyrgyz">Кыргызча</string>
    <string name="russian">Русский</string>
    <string name="trafficRules">ПДД</string>
    <string name="controlITMIAKR">Руководство ВВ МВД КР</string>
    <string name="controlMIAKR">Руководство МВД КР</string>
    <string name="aboutUs">О нас</string>
    <string name="name">Кадыров Марат Азаматович</string>
    <string name="no_data">Нет данных</string>
    <string name="controlKR">Руководство КР</string>
    <string name="dictionary">Кыргызcко-русский словарь</string>
    <string name="maps">Карта</string>
    <string name="rukovostvo_KR">Руководство КР</string>
    <string name="_1917_1918_20_1918_20_1918_200_1918_11_49_1919_1918_1920_21_27_3_1919_1_3_1_5_21_1919_25_1918_1920_1919_40_191_3_1919">После Великой Октябрьской социалистической революции в конце 1917, начале 1918 года во всех городах Средней Азии и Казахстана создавались местные советы. В это время НКВД РСФСР и Турк ЦИК издали постановление «О рабочей милиции», а также разработанное Ташкентским Совдепом «Положение о Красной гвардии». На основе этих документов начали формироваться отряды милиции и дружины самообороны для защиты от массового бандитизма и разгула басмачества. А 20 января 1918 года собрание членов «Привокзальной Пишпекской трудовой гарантии» решило образовать свои вооруженные дружины для охраны, сохранения достояния общины и общественной безопасности граждан. Первая дружина с­­остояла из 20 человек, у каждого из них имелась винтовка. В Пишкекском уезде был сформирован красногвардейский отряд, которым командовал А. Гончаров. Местный Совет начал записывать в Красную гвардию, одновременно выполнявшую милицейские функции. К началу марта 1918 года здесь уже был сформирован отряд численностью 200 сотрудников, который оказал большую помощь в становлении и упрочении Советской власти в южных районах Семиреченской области. В то же время был создан красногвардейский отряд и в Токмаке. А всего на территории Туркестанского края, куда входил Кыргызстан, к середине 1918 года в Красной гвардии и отрядах самообороны насчитывалось 11 тысяч человек – внушительная сила. В первые годы отряды Красной гвардии вели активную борьбу с голодом и разрухой, с басмачами и прочими контрреволюционными силами. Вопросами формирования милиции, Красной гвардии, отрядов самообороны руководили административные отделы Советов народных депутатов. Милиция делилась на городскую и губернскую. Низовым звеном аппарата милиции являлся участок во главе с участковым начальником, в подчинении которого старшие и рядовые милиционеры. В это время шел процесс организационного становления форм и методов работы милиции. Часто менялась структура, обязанности, подчиненность, и эта неразбериха мешала успешной борьбе преступностью. Параллельно в городах с населением свыше 49 тысяч жителей шло формирование аппаратов уголовного розыска, которые на первых порах (до 1919 года) существовали самостоятельно и подчинялись Главному управлению милиции и АдмО местных Советов. Первым начальником Пишпекского уездного Отдела уголовного розыска был Имаш Кабеков. Сформированные к концу 1918 года отделения уголовного розыска в Пишпекском, Токмакском, Пржевальском и Нарынском уездах сначала действовали не только в городах, но и в сельской местности. Они сосредоточили свои усилия на борьбу с бандитизмом, кражами государственного имущества, басмачеством, скотокрадством и контрреволюцией. Штаты уголовного розыска и милиции в целом были малочисленными. Например, в отделе уголовного розыска Ошского уезда в начале 1920 года было всего 21 сотрудник, в Пишпеке – 27 человек. Помощь кадрами и методическими пособиями угрозыску Кыргызстана оказывал центррозыск НКВД РСФСР, осуществлявший общее руководство ОУР на местах. В период иностранной интервенции и гражданской войны советская рабоче-крестьянская милиция являлась исполнительным вооруженным органом Советов рабочих, солдатских и крестьянских депутатов и свою работу подчинила укреплению советского государства и правопорядка. Совместно с органами ВЧК милиция подавляла антисоветские контрреволюционные мятежи, боролась с хищениями государственного имущества, спекуляцией. В ожесточенной борьбе с бандитскими шайками в эти годы погибли сотни сотрудников милиции и уголовного розыска Кыргызстана. Среди них были первые начальники милиции Балтыходжа Султанов, Атажан Сулейманов и Газыбай Козубаев. С укреплением советской власти продолжался и процесс становления милиции. Так 3 апреля 1919 года Совет народных комиссаров РСФСР издал декрет «О советской рабоче-крестьянской милиции», по которому сотрудники милиции не подлежали призыву в Красную армию и считались прикомандированными к управлениям исполкомов Советов. На НКВД возлагалась обязанность держать в действующей армии 1/3 милиционеров и 1/5 командного состава милиции. В милиции вводилась военная дисциплина и обязательное обучение военному делу. Кроме уездно-городской милиции для обеспечения правопорядка в стране были организованы специализированные виды милиции. Так, 21 февраля 1919 года ВЦИК издал постановление «Об организации железнодорожной милиции и железнодорожной охраны», 25 июля 1918 года Совет народных комиссаров принял декрет «Об учреждении речной милиции». в конце 1920 года по решению Совета Труда и Обороны вся железнодорожная и речная милиция перешли в распоряжение командующего внутренними войсками республики. Осенью 1919 года НКВД принял решение организовать промышленную милицию для борьбы с хищениями государственной собственности и активизации борьбы с преступностью. Были осуществлены меры по объединению органов ВЧК и милиции, произошло частичное объединение аппарата уголовного розыска и транспортных ЧК, разрешалось открывать отделения уголовного розыска в городах с населением менее 40 тысяч человек. Угрозыску приходилось проводить предварительное следствие по большинству дел. В те годы впервые в органах милиции создаются научно-технические подразделения. В феврале 191 года коллегия НКВД утвердила смету на образование кабинета судебной экспертизы, регистрационного и дактилоскопического бюро и музея. Созданный при Центророзыске кабинет судебной экспертизы был первым научно-техническим подразделением НКВД, Наркомюста и Наркомздрава. 3 апреля 1919 года Совнарком РСФСР принял декрет «О советской рабоче-крестьянской милиции», который изменил положение о милиции и создал условия для повышения ее боеспособности, укрепления ее кадров. Декретом предусматривался перевод всех видов милиции на государственный счет. Кроме этого, милиционеры и командный состав должны были в качестве армейского резерва оставаться на своих местах, прикомандированные к исполкомам местных Советов.</string>
    <string name="office_ipsum_you_must_be_muted_office_ipsum">Office ipsum you must be muted. Office ipsum</string>
    <string name="goread">Читать далее…</string>
    <string name="fastnews">Срочные новости</string>
    <string name="find">Найти</string>
    <string name="_16_2024">16 июля 2024</string>
    <string name="_12">результатов найдено</string>
    <string name="kyrgyz_alert">Кыргызча</string>
    <string name="russian_alert">Русский</string>
    <string name="n_n">Выберите язык для \n продолжения, в дальнейшем вы \n всегда можете изменить его.</string>
    <string name="n_n_n">Улантуу үчүн тилиңизди \n тандаңыз. Аны төмөндө өзгөртө \n аласыз.</string>
    <string name="tech_error">Технические неполадки</string>
    <string name="tech_text">Извините за неудобства, возникли технические неполадки в нашем приложении. Мы работаем над исправлением проблемы. Пожалуйста, попробуйте обновить приложение. Спасибо за ваше понимание!</string>
    <string name="update">Обновить</string>
    <string name="twelve">12</string>
</resources>