<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="24dp">

    <LinearLayout
        android:id="@+id/LlText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/n_n_n"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/n_n"
            android:textColor="@color/black"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialogButtonKg"
            android:layout_width="106dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_corners_notif"
            android:padding="0dp"
            android:text="@string/kyrgyz_alert"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/dialogButtonRu"
            android:layout_width="106dp"
            android:layout_height="50dp"
            android:layout_marginStart="26dp"
            android:background="@drawable/rounded_corners_notif"
            android:padding="0dp"
            android:text="@string/russian_alert"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>