<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ui.fragments.malfunctions.MalfunctionsFragment">

    <TextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="237dp"
        android:text="@string/tech_error"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvFetchedData"
        android:layout_width="328dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:lineHeight="18.2sp"
        android:text="@string/tech_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textSize="18sp" />

</LinearLayout>