<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:layout_marginBottom="24dp"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_item"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/raunder"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription"
            tools:src="@drawable/main_image" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="@string/_16_2024" />

        <TextView
            android:id="@+id/tv_urgent_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="10dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/fastnews" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:maxLines="1"
            android:textColor="@color/black"
            tools:text="@string/office_ipsum_you_must_be_muted_office_ipsum" />

        <TextView
            android:id="@+id/to_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/roboto"
            android:text="@string/goread"
            android:textColor="@color/white_blue" />

    </LinearLayout>

</androidx.cardview.widget.CardView>