<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ui.fragments.menu.control.mvd.search_mvd.SearchControlFragment">

    <EditText
        android:id="@+id/et_search_mvd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="120dp"
        android:background="@drawable/rounder_search"
        android:drawableStart="@drawable/search_line_sc"
        android:drawablePadding="8dp"
        android:hint="@string/find"
        android:inputType="text"
        android:padding="10dp"
        android:paddingEnd="40dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/delete_clear_btn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignTop="@id/et_search_mvd"
        android:layout_alignEnd="@id/et_search_mvd"
        android:layout_alignBottom="@id/et_search_mvd"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:padding="6dp"
        android:src="@drawable/vector_exit"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/btn_cross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/et_search_mvd"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="34dp"
        android:text="@string/cross"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="85dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/number_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="13sp"
            tools:text="@string/twelve" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/_12"
            android:textColor="@color/black"
            android:textSize="13sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_management"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="115dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_management_kg" />

    <FrameLayout
        android:id="@+id/fSearchControlProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="75dp"
        android:visibility="gone">

        <include layout="@layout/progress_bar" />

    </FrameLayout>

</RelativeLayout>