<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presenter.ui.fragments.auth.AuthorizationFragment">

    <LinearLayout
        android:id="@+id/ln_main_authorization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.316">

        <TextView
            android:id="@+id/tv_authorization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="13dp"
            android:padding="7dp"
            android:text="@string/authorization"
            android:textColor="@color/black"
            android:textSize="@dimen/_27_50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:lineSpacingExtra="5sp"
            android:padding="2dp"
            android:text="@string/notice"
            android:textAlignment="center"
            android:textAppearance="@style/CustomTextInputLayout"
            android:textSize="@dimen/_17sp"
            android:translationY="-2.62sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="@color/dark_blue"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/dark_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserLogin"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="@string/Login"
                android:inputType="textLongMessage" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="@color/dark_blue"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/dark_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserPasswords"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="@string/Password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/goInto"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cornerRadius="11dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>